# nix-0.16-cmake

./: CMakeLists.txt  NEWS  README.cmake  config.h.in  detect-system.sh  dir_compare  install-autotools-nix  post_installation_test  post_installation_test_autotools  post_installation_test_cmake  test
corepkgs/: CMakeLists.txt
doc/: CMakeLists.txt
doc/manual/: NEWS.html  manual.html  nix-build.1  nix-channel.1  nix-collect-garbage.1  nix-copy-closure.1  nix-env.1  nix-hash.1  nix-install-package.1  nix-instantiate.1  nix-prefetch-url.1  nix-pull.1  nix-push.1  nix-store.1  nix-worker.8
misc/: CMakeLists.txt
scripts/: CMakeLists.txt
src/: CMakeLists.txt
src/boost/: CMakeLists.txt
src/bsdiff-4.3/: CMakeLists.txt
src/libexpr/: CMakeLists.txt  lexer-tab.cc  lexer-tab.hh  parser-tab.cc  parser-tab.hh
src/libmain/: CMakeLists.txt
src/libstore/: CMakeLists.txt
src/libutil/: CMakeLists.txt
src/nix-env/: CMakeLists.txt
src/nix-hash/: CMakeLists.txt
src/nix-instantiate/: CMakeLists.txt
src/nix-log2xml/: CMakeLists.txt
src/nix-setuid-helper/: CMakeLists.txt
src/nix-store/: CMakeLists.txt
src/nix-worker/: CMakeLists.txt
