# FIXME: need to use scripts to fill these
# grep -h "@[a-z,0-9]*@" -o * | sort | uniq 
SET(bindir 		"${CMAKE_INSTALL_PREFIX}/${NIX_BIN_DIR}")
SET(libexecdir 		"${CMAKE_INSTALL_PREFIX}/${NIX_LIBEXEC_DIR}")
SET(localstatedir 	"${CMAKE_INSTALL_PREFIX}/${NIX_STATE_DIR}")
SET(storedir 		"${CMAKE_INSTALL_PREFIX}/${NIX_STORE_DIR}")
SET(sysconfigdir 	"${CMAKE_INSTALL_PREFIX}/${NIX_CONF_DIR}")
SET(datadir 		"${CMAKE_INSTALL_PREFIX}/${NIX_DATA_DIR}")
SET(system ${NIX_SYSTEM})

SET(bunzip2	"${NIX_BUNZIP2_PATH}")
SET(bzip2	"${NIX_BZIP2_PATH}")
SET(coreutils   "${NIX_COREUTILS_PATH}")
SET(curl	"${NIX_CURL_PATH}")
SET(gzip	"${NIX_GZIP_PATH}")
SET(perl	"${NIX_PERL_PATH}")
SET(sed		"${NIX_SED_PATH}")
SET(shell	"${NIX_SHELL_PATH}")

MACRO(NIX_CONFIGURE_FILE FILE)
	CONFIGURE_FILE("${FILE}.in" "${FILE}" @ONLY)
ENDMACRO(NIX_CONFIGURE_FILE)

NIX_CONFIGURE_FILE("nix-collect-garbage")
NIX_CONFIGURE_FILE("nix-pull")
NIX_CONFIGURE_FILE("nix-push")
NIX_CONFIGURE_FILE("nix-prefetch-url")
NIX_CONFIGURE_FILE("nix-install-package")
NIX_CONFIGURE_FILE("nix-channel")
NIX_CONFIGURE_FILE("nix-build")
NIX_CONFIGURE_FILE("nix-copy-closure")

NIX_CONFIGURE_FILE("nix.sh")

NIX_CONFIGURE_FILE("find-runtime-roots.pl")
NIX_CONFIGURE_FILE("generate-patches.pl")
NIX_CONFIGURE_FILE("build-remote.pl")
NIX_CONFIGURE_FILE("download-using-manifests.pl")
NIX_CONFIGURE_FILE("copy-from-other-stores.pl")

NIX_CONFIGURE_FILE("readmanifest.pm")
NIX_CONFIGURE_FILE("readconfig.pm")

MACRO(NIX_INSTALL_EXECUTABLE_FILE NIX_FILE NIX_DESTINATION)
	INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/${NIX_FILE}" 
	DESTINATION "${NIX_DESTINATION}"
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)
ENDMACRO(NIX_INSTALL_EXECUTABLE_FILE)

NIX_INSTALL_EXECUTABLE_FILE("nix-collect-garbage" "${NIX_BIN_DIR}")
NIX_INSTALL_EXECUTABLE_FILE("nix-collect-garbage" "${NIX_BIN_DIR}")
NIX_INSTALL_EXECUTABLE_FILE("nix-pull" "${NIX_BIN_DIR}")
NIX_INSTALL_EXECUTABLE_FILE("nix-push" "${NIX_BIN_DIR}")
NIX_INSTALL_EXECUTABLE_FILE("nix-prefetch-url" "${NIX_BIN_DIR}")
NIX_INSTALL_EXECUTABLE_FILE("nix-install-package" "${NIX_BIN_DIR}")
NIX_INSTALL_EXECUTABLE_FILE("nix-channel" "${NIX_BIN_DIR}")
NIX_INSTALL_EXECUTABLE_FILE("nix-build" "${NIX_BIN_DIR}")
NIX_INSTALL_EXECUTABLE_FILE("nix-copy-closure" "${NIX_BIN_DIR}")

NIX_INSTALL_EXECUTABLE_FILE("nix.sh" "${NIX_CONF_DIR}/profile.d/")

NIX_INSTALL_EXECUTABLE_FILE("find-runtime-roots.pl" "${NIX_LIBEXEC_DIR}/nix")
NIX_INSTALL_EXECUTABLE_FILE("generate-patches.pl" "${NIX_LIBEXEC_DIR}/nix")
NIX_INSTALL_EXECUTABLE_FILE("build-remote.pl" "${NIX_LIBEXEC_DIR}/nix")

NIX_INSTALL_EXECUTABLE_FILE("download-using-manifests.pl" "${NIX_LIBEXEC_DIR}/nix/substituters")
NIX_INSTALL_EXECUTABLE_FILE("copy-from-other-stores.pl" "${NIX_LIBEXEC_DIR}/nix/substituters")

INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/readmanifest.pm" DESTINATION "${NIX_LIBEXEC_DIR}/nix")
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/readconfig.pm"   DESTINATION "${NIX_LIBEXEC_DIR}/nix")

INSTALL(FILES "ssh.pm" DESTINATION "${NIX_LIBEXEC_DIR}/nix")

