ADD_SUBDIRECTORY (bin2c)
ADD_SUBDIRECTORY (boost)
ADD_SUBDIRECTORY (libutil)
ADD_SUBDIRECTORY (libstore)
ADD_SUBDIRECTORY (libmain)
ADD_SUBDIRECTORY (nix-store)
ADD_SUBDIRECTORY (nix-hash)
ADD_SUBDIRECTORY (libexpr)
ADD_SUBDIRECTORY (nix-instantiate)
ADD_SUBDIRECTORY (nix-env)
ADD_SUBDIRECTORY (nix-worker)
ADD_SUBDIRECTORY (nix-setuid-helper)
ADD_SUBDIRECTORY (nix-log2xml)
ADD_SUBDIRECTORY (bsdiff-4.3)
