SET(libmainSrc ${libmainSrc}
	shared.cc
)

INCLUDE_DIRECTORIES (${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES (.)
INCLUDE_DIRECTORIES (..)
INCLUDE_DIRECTORIES (../..)
INCLUDE_DIRECTORIES (../libutil)
INCLUDE_DIRECTORIES (../libstore)

add_definitions(
	-DNIX_STORE_DIR="${NIX_STORE_DIR}"
	-DNIX_DATA_DIR="${NIX_DATA_DIR}"
	-DNIX_STATE_DIR="${NIX_STATE_DIR}"
	-DNIX_LOG_DIR="${NIX_LOG_DIR}"
	-DNIX_CONF_DIR="${NIX_CONF_DIR}"
	-DNIX_LIBEXEC_DIR="${NIX_LIBEXEC_DIR}"
	-DNIX_BIN_DIR="${NIX_BIN_DIR}"
	-DNIX_VERSION="${NIX_VERSION}"
	-DSYSTEM="${NIX_SYSTEM}"
)

ADD_LIBRARY(main SHARED ${libmainSrc} )

INSTALL( TARGETS main DESTINATION "${NIX_LIB_DIR}/nix" )

INSTALL( FILES "shared.hh" DESTINATION "${NIX_INCLUDE_DIR}/nix" )
