SET(libmainSrc ${libmainSrc}
	shared.cc
)

INCLUDE_DIRECTORIES (${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES (.)
INCLUDE_DIRECTORIES (..)
INCLUDE_DIRECTORIES (../..)
INCLUDE_DIRECTORIES (../libutil)
INCLUDE_DIRECTORIES (../libstore)

MESSAGE("-DNIX_STORE_DIR=${NIX_STORE_DIR}")
MESSAGE("-DNIX_DATA_DIR=${CMAKE_INSTALL_PREFIX}/${NIX_DATA_DIR}")
MESSAGE("-DNIX_STATE_DIR=${CMAKE_INSTALL_PREFIX}/${NIX_STATE_DIR}/nix")
MESSAGE("-DNIX_LOG_DIR=${CMAKE_INSTALL_PREFIX}/${NIX_LOG_DIR}")
MESSAGE("-DNIX_CONF_DIR=${CMAKE_INSTALL_PREFIX}/${NIX_CONF_DIR}/nix")
MESSAGE("-DNIX_LIBEXEC_DIR=${CMAKE_INSTALL_PREFIX}/${NIX_LIBEXEC_DIR}")
MESSAGE("-DNIX_BIN_DIR=${CMAKE_INSTALL_PREFIX}/${NIX_BIN_DIR}")
MESSAGE("-DNIX_VERSION=${NIX_VERSION}")
MESSAGE("-DSYSTEM=${NIX_SYSTEM}")


add_definitions(
	-DNIX_STORE_DIR="${NIX_STORE_DIR}"
	-DNIX_DATA_DIR="${CMAKE_INSTALL_PREFIX}/${NIX_DATA_DIR}"
	-DNIX_STATE_DIR="${CMAKE_INSTALL_PREFIX}/${NIX_STATE_DIR}"
	-DNIX_LOG_DIR="${CMAKE_INSTALL_PREFIX}/${NIX_LOG_DIR}"
	-DNIX_CONF_DIR="${CMAKE_INSTALL_PREFIX}/${NIX_CONF_DIR}"
	-DNIX_LIBEXEC_DIR="${CMAKE_INSTALL_PREFIX}/${NIX_LIBEXEC_DIR}"
	-DNIX_BIN_DIR="${CMAKE_INSTALL_PREFIX}/${NIX_BIN_DIR}"
	-DNIX_VERSION="${NIX_VERSION}"
	-DSYSTEM="${NIX_SYSTEM}"
)

ADD_LIBRARY(main SHARED ${libmainSrc} )

INSTALL( TARGETS main DESTINATION "${NIX_LIB_DIR}/nix" )

INSTALL( FILES "shared.hh" DESTINATION "${NIX_INCLUDE_DIR}/nix" )
